2003-04-09  JP Rosevear  <jpr@ximian.com>

	Fixes #40952
	
	* pcs/cal-backend-file.c (cal_backend_file_open): check for file
	method instead of is_local

2003-04-08  JP Rosevear  <jpr@ximian.com>

	Fixes #40894
	
	* gui/gnome-cal.c
	(gnome_calendar_on_date_navigator_selection_changed): update the
	selection for all view types

2003-04-08  Ettore Perazzoli  <ettore@ximian.com>

	* gui/dialogs/alarm-options.c: Remove button_ok, button_cancel,
	canceled members from struct Dialog.
	(get_widgets): Do not initialize.
	(close_dialog): Destroy the toplevel.
	(toplevel_delete_event_cb): Removed.
	(button_cancel_clicked_cb): Removed.
	(button_ok_clicked_cb): Removed.
	(close_dialog): Removed.
	(alarm_options_dialog_run): Use gtk_dialog_run.
	(init_widgets): Do not init ->canceled, do not connect OK/Cancel
	buttons.
	(alarm_to_dialog): No need to make the file entry modal from here
	anymore.

	* gui/dialogs/alarm-options.glade: Turned into a GtkDialog.  Set
	the "modal" property to True for the file entry.

2003-04-07  Hans Petter Jansson  <hpj@ximian.com>

	Fixes #35926.

	* gui/dialogs/event-page.glade: Remove contacts entry/chooser.

	* gui/dialogs/event-page.c: Remove contacts entry/chooser.
	(event_page_init): Remove references.
	(event_page_finalize): Ditto.
	(event_page_fill_widgets): Ditto.
	(event_page_fill_component): Ditto.
	(get_widgets): Ditto.
	(init_widgets): Ditto.
	(contacts_clicked_cb): Remove wholesale.
	(contacts_changed_cb): Ditto.

2003-04-07  JP Rosevear  <jpr@ximian.com>

	Fixes #40876
	
	* gui/e-meeting-time-sel.c
	(e_meeting_time_selector_refresh_free_busy): guard against
	callbacks after destruction
	(e_meeting_time_selector_refresh_cb): ditto

2003-04-07  JP Rosevear  <jpr@ximian.com>
	
	* gui/dialogs/event-page.glade: create buttons properly

	* gui/itip-utils.c (comp_server_send): for errors other than busy,
	we want to email the results

	* pcs/cal-backend.c (cal_backend_ref_categories): insert the new
	category in the category list as well