@@ -1,5 +1,12 @@
 2003-04-09  JP Rosevear  <jpr@ximian.com>
 
+	Fixes #40915
+	
+	* gui/calendar-model.c (get_due_status): when getting the current
+	time for date values, use a timezone aware function
+
+2003-04-09  JP Rosevear  <jpr@ximian.com>
+	
 	Fixes #40952
 	
 	* pcs/cal-backend-file.c (cal_backend_file_open): check for file
